# boto-test

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py  main.py  repository.py  schemas.py
tests/: test_shortener.py
