[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boto-url-shortener"
version = "0.1.0"
description = "Простое тестовое приложение для сокращения ссылок (Boto test task)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
shortener-app = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

